syntax = "proto3";
package communication;
option go_package=".;communication";

import "debrief_proto/generic.proto";
import "google/protobuf/timestamp.proto";

message WebsiteEntity {
  string id = 1;
  repeated string user_ids = 2;
  string raw_link = 3;
  string summary = 4;
  string title = 5;
  bool summary_uploaded = 6;
  map<string, UserInfoEntity> user_infos = 7;
}

message UserInfoEntity {
  google.protobuf.Timestamp save_time = 1;
  bool read = 2;

  bool archived = 3;
  bool saved = 4;
}

message WebsiteByUserQuery {
  string user_id = 1;
}

message WebsiteSet {
  repeated WebsiteEntity websites = 1;
}

message FlagRequest {
  string website_id = 1;
  string user_id = 2;
  bool flag_status = 3;
  string flag_name = 4;
}

service Summary {
  rpc Get(WebsiteByUserQuery) returns (WebsiteSet) {};
  rpc ToggleFlag(FlagRequest) returns (NullResponse) {};
}

service Generate {
  rpc Title(WebsiteEntity) returns (WebsiteEntity) {};
  rpc Summarize(WebsiteEntity) returns (WebsiteEntity) {};
  rpc TestConn(NullRequest) returns (NullResponse) {};
}