syntax = "proto3";
package communication;
option go_package=".;communication";

import "google/protobuf/timestamp.proto";

message NullResponse {}

message UserRegisterRequest {
  string email = 2;
  string password = 3;
}

message UserLoginRequest {
  string email = 1;
  string password = 2;
}

message UserSigninResponse {
  string token = 3;
  google.protobuf.Timestamp token_timeout = 7;
  UserEntity user = 8;
}

message UserLogoutRequest {
  string username = 1;
  string token = 2;
}

message UserPullRequest {
  string user_id = 1;
}

message UserEntity {
  string id = 1;
  string email = 2;
}

message UserNubEntity {
  string id = 1;
  string username = 2;
}

message ForgotRequest {
    string email = 1;
}

message ResetConfirmRequest {
    string reset_id = 1;
}

message ResetConfirmResponse {
    bool valid_id = 1;
}

message ChangePasswordRequest {
    string reset_id = 1;
    string new_password = 2;
}


service Auth{
    rpc Register(UserRegisterRequest) returns (UserSigninResponse) {};
    rpc Login(UserLoginRequest) returns (UserSigninResponse) {};
    rpc Logout(UserLogoutRequest) returns (NullResponse) {};
    rpc Pull(UserPullRequest) returns (UserEntity) {};

    rpc ForgotPassword(ForgotRequest) returns (NullResponse) {};
    rpc ConfirmResetId(ResetConfirmRequest) returns (ResetConfirmResponse) {};
    rpc ChangePassword(ChangePasswordRequest) returns (UserSigninResponse) {};
}